Створено за допомогою Colab

--- a/Лаб2,_Лозенко_Д_С_,_Варіант_9.ipynb
+++ b/Лаб2,_Лозенко_Д_С_,_Варіант_9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNInUmCrXKb/XMtC2+TVp8T",
+      "authorship_tag": "ABX9TyOPAZhwu3PUw89E6muclWKJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4537,7 +4537,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Висновок: В результаті виконання цієї лабораторної роботи ми навчилися як за допомогою бібліотек numpy, pandas та requests можна взаємодіяти з датасетами"
+        "Висновок: В результаті виконання цієї лабораторної роботи стало зрозуміло як за допомогою бібліотек numpy, pandas та requests можна взаємодіяти з датасетами."
       ],
       "metadata": {
         "id": "5nBy30q9LG6W"
